--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.7.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-local-mongoose": "^7.1.2"
   }
 }
