--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/flyingisawol/getReal#readme",
   "dependencies": {
     "cloudinary": "^1.32.0",
+    "connect-ensure-login": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "connect-mongoose-session": "^0.4.8",
     "dotenv": "^16.0.3",
