--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "engines": {
     "node": "18.9.1"
-  },  
+  },
   "description": "GA Project 3",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "scripts": {
-    "heroku-postbuild": "cd client && npm i && npm run build"
+    "heroku-postbuild": "cd client && npm i && npm run build",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +27,7 @@
     "connect-mongodb-session": "^3.1.1",
     "connect-mongoose-session": "^0.4.8",
     "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.7.0",
